Package_Tools/pas_units/gst/gstelement.pas


procedure gst_element_call_async(element:PGstElement; func:TGstElementCallAsyncFunc; user_data:Tgpointer; destroy_notify:TGDestroyNotify);cdecl;external gstreamerlib;
function gst_element_get_factory(element:PGstElement):PGstElementFactory;cdecl;external gstreamerlib;
function gst_element_add_property_notify_watch(element:PGstElement; property_name:Pgchar; include_value:Tgboolean):Tgulong;cdecl;external gstreamerlib;
function gst_element_add_property_deep_notify_watch(element:PGstElement; property_name:Pgchar; include_value:Tgboolean):Tgulong;cdecl;external gstreamerlib;
procedure gst_element_remove_property_notify_watch(element:PGstElement; watch_id:Tgulong);cdecl;external gstreamerlib;
function gst_element_get_pad_template(element:PGstElement; name:Pgchar):PGstPadTemplate;cdecl;external gstreamerlib;
function gst_element_get_pad_template_list(element:PGstElement):PGList;cdecl;external gstreamerlib;
function gst_element_get_metadata(element:PGstElement; key:Pgchar):Pgchar;cdecl;external gstreamerlib;


function GST_ELEMENT_CAST(obj : Pointer) : PGstElement;

function GST_STATE(elem : longint) : longint;
function GST_STATE_NEXT(elem : longint) : longint;
function GST_STATE_PENDING(elem : longint) : longint;
function GST_STATE_TARGET(elem : longint) : longint;
function GST_STATE_RETURN(elem : longint) : longint;
function __GST_SIGN(val : longint) : longint;
function GST_STATE_GET_NEXT(cur,pending : longint) : TGstState;
function GST_STATE_TRANSITION(cur,next : longint) : TGstStateChange;
function GST_STATE_TRANSITION_CURRENT(trans : longint) : TGstState;
function GST_STATE_TRANSITION_NEXT(trans : longint) : TGstState;

function GST_ELEMENT_IS_LOCKED_STATE(elem : longint) : longint;
function GST_ELEMENT_NAME(elem : longint) : longint;
function GST_ELEMENT_PARENT(elem : longint) : longint;
function GST_ELEMENT_BUS(elem : longint) : longint;
function GST_ELEMENT_CLOCK(elem : longint) : longint;
function GST_ELEMENT_PADS(elem : longint) : longint;
function GST_ELEMENT_START_TIME(elem : longint) : longint;

function GST_STATE_GET_LOCK(elem : longint) : longint;
function GST_STATE_GET_COND(elem : longint) : longint;
function GST_STATE_LOCK(elem : longint) : longint;
function GST_STATE_TRYLOCK(elem : longint) : longint;
function GST_STATE_UNLOCK(elem : longint) : longint;
function GST_STATE_WAIT(elem : longint) : longint;
function GST_STATE_WAIT_UNTIL(elem,end_time : longint) : longint;
function GST_STATE_SIGNAL(elem : longint) : longint;
function GST_STATE_BROADCAST(elem : longint) : longint;

function gst_element_get_name(elem : longint) : longint;
function gst_element_set_name(elem,name : longint) : longint;
function gst_element_get_parent(elem : longint) : longint;
function gst_element_set_parent(elem,parent : longint) : longint;

// === Konventiert am: 11-9-24 16:14:38 ===

function GST_TYPE_ELEMENT : TGType;
function GST_ELEMENT(obj : Pointer) : PGstElement;
function GST_ELEMENT_CLASS(klass : Pointer) : PGstElementClass;
function GST_IS_ELEMENT(obj : Pointer) : Tgboolean;
function GST_IS_ELEMENT_CLASS(klass : Pointer) : Tgboolean;
function GST_ELEMENT_GET_CLASS(obj : Pointer) : PGstElementClass;

implementation

function GST_TYPE_ELEMENT : TGType;
  begin
    GST_TYPE_ELEMENT:=gst_element_get_type;
  end;

function GST_ELEMENT(obj : Pointer) : PGstElement;
begin
  Result := PGstElement(g_type_check_instance_cast(obj, GST_TYPE_ELEMENT));
end;

function GST_ELEMENT_CLASS(klass : Pointer) : PGstElementClass;
begin
  Result := PGstElementClass(g_type_check_class_cast(klass, GST_TYPE_ELEMENT));
end;

function GST_IS_ELEMENT(obj : Pointer) : Tgboolean;
begin
  Result := g_type_check_instance_is_a(obj,  GST_TYPE_ELEMENT);
end;

function GST_IS_ELEMENT_CLASS(klass : Pointer) : Tgboolean;
begin
  Result := g_type_check_class_is_a(klass,  GST_TYPE_ELEMENT);
end;

function GST_ELEMENT_GET_CLASS(obj : Pointer) : PGstElementClass;
begin
  Result := PGstElementClass(PGTypeInstance(obj)^.g_class);
end;


{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_ELEMENT_CAST(obj: Pointer): PGstElement;
begin
  GST_ELEMENT_CAST:=PGstElement(obj);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE(elem : longint) : longint;
begin
  GST_STATE:=(GST_ELEMENT_CAST(elem))^.current_state;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_NEXT(elem : longint) : longint;
begin
  GST_STATE_NEXT:=(GST_ELEMENT_CAST(elem))^.next_state;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_PENDING(elem : longint) : longint;
begin
  GST_STATE_PENDING:=(GST_ELEMENT_CAST(elem))^.pending_state;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_TARGET(elem : longint) : longint;
begin
  GST_STATE_TARGET:=(GST_ELEMENT_CAST(elem))^.target_state;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_RETURN(elem : longint) : longint;
begin
  GST_STATE_RETURN:=(GST_ELEMENT_CAST(elem))^.last_return;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function __GST_SIGN(val : longint) : longint;
var
   if_local1, if_local2 : longint;
(* result types are not known *)
begin
  if 0 then
    if_local1:=1
  else
    if_local1:=0;
  if 0 then
    if_local2:=-(1)
  else
    if_local2:=val>(if_local1);
  __GST_SIGN:=val<(if_local2);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_STATE_GET_NEXT(cur,pending : longint) : TGstState;
begin
  GST_STATE_GET_NEXT:=TGstState(Tcur(+(__GST_SIGN(Tgint(Tpending(-(Tgint(cur))))))));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_STATE_TRANSITION(cur,next : longint) : TGstStateChange;
begin
  GST_STATE_TRANSITION:=TGstStateChange((cur shl 3) or next);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_STATE_TRANSITION_CURRENT(trans : longint) : TGstState;
begin
  GST_STATE_TRANSITION_CURRENT:=TGstState(trans shr 3);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_STATE_TRANSITION_NEXT(trans : longint) : TGstState;
begin
  GST_STATE_TRANSITION_NEXT:=TGstState(Ttrans(@($7)));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_IS_LOCKED_STATE(elem : longint) : longint;
begin
  GST_ELEMENT_IS_LOCKED_STATE:=GST_OBJECT_FLAG_IS_SET(elem,GST_ELEMENT_FLAG_LOCKED_STATE);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_NAME(elem : longint) : longint;
begin
  GST_ELEMENT_NAME:=GST_OBJECT_NAME(elem);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_PARENT(elem : longint) : longint;
begin
  GST_ELEMENT_PARENT:=GST_ELEMENT_CAST(GST_OBJECT_PARENT(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_BUS(elem : longint) : longint;
begin
  GST_ELEMENT_BUS:=(GST_ELEMENT_CAST(elem))^.bus;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_CLOCK(elem : longint) : longint;
begin
  GST_ELEMENT_CLOCK:=(GST_ELEMENT_CAST(elem))^.clock;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_PADS(elem : longint) : longint;
begin
  GST_ELEMENT_PADS:=(GST_ELEMENT_CAST(elem))^.pads;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_ELEMENT_START_TIME(elem : longint) : longint;
begin
  GST_ELEMENT_START_TIME:=(GST_ELEMENT_CAST(elem))^.start_time;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_GET_LOCK(elem : longint) : longint;
begin
  GST_STATE_GET_LOCK:=@((GST_ELEMENT_CAST(elem))^.state_lock);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_GET_COND(elem : longint) : longint;
begin
  GST_STATE_GET_COND:=@((GST_ELEMENT_CAST(elem))^.state_cond);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_LOCK(elem : longint) : longint;
begin
  GST_STATE_LOCK:=g_rec_mutex_lock(GST_STATE_GET_LOCK(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_TRYLOCK(elem : longint) : longint;
begin
  GST_STATE_TRYLOCK:=g_rec_mutex_trylock(GST_STATE_GET_LOCK(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_UNLOCK(elem : longint) : longint;
begin
  GST_STATE_UNLOCK:=g_rec_mutex_unlock(GST_STATE_GET_LOCK(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_WAIT(elem : longint) : longint;
begin
  GST_STATE_WAIT:=g_cond_wait(GST_STATE_GET_COND(elem),GST_OBJECT_GET_LOCK(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_WAIT_UNTIL(elem,end_time : longint) : longint;
begin
  GST_STATE_WAIT_UNTIL:=g_cond_wait_until(GST_STATE_GET_COND(elem),GST_OBJECT_GET_LOCK(elem),end_time);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_SIGNAL(elem : longint) : longint;
begin
  GST_STATE_SIGNAL:=g_cond_signal(GST_STATE_GET_COND(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function GST_STATE_BROADCAST(elem : longint) : longint;
begin
  GST_STATE_BROADCAST:=g_cond_broadcast(GST_STATE_GET_COND(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_element_get_name(elem : longint) : longint;
begin
  gst_element_get_name:=gst_object_get_name(GST_OBJECT_CAST(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_element_set_name(elem,name : longint) : longint;
begin
  gst_element_set_name:=gst_object_set_name(GST_OBJECT_CAST(elem),name);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_element_get_parent(elem : longint) : longint;
begin
  gst_element_get_parent:=gst_object_get_parent(GST_OBJECT_CAST(elem));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_element_set_parent(elem,parent : longint) : longint;
begin
  gst_element_set_parent:=gst_object_set_parent(GST_OBJECT_CAST(elem),parent);
end;


end.
